--- a/MysiePysieService/Views/Shared/_Navbar.cshtml
+++ b/MysiePysieService/Views/Shared/_Navbar.cshtml
@@ -6,13 +6,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Nazwa aplikacji", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("MysiePysieService", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
-                <li>@Html.ActionLink("Informacje", "About", "Home")</li>
-                <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Studenci", "Index", "Students")</li>
+                <li>@Html.ActionLink("Nauczyciele", "Index", "Teachers")</li>
+                <li>@Html.ActionLink("Przedmioty", "Index", "Subjects")</li>
+                <li>@Html.ActionLink("Klasy", "Index", "Classes")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
